@@ -1,0 +1,6 @@
+couch_dbupdates
+---------------
+
+2012 (c) Benoît Chesneau <benoitc@refuge.io>
+
+couch_dbupdates is released under the Apache License 2.
