@@ -11,6 +11,8 @@ Each release section notes when backwards incompatible changes have been made.
 # -------------
 #
 # This version has not been released yet.
+#  * Added /_db_update API endpoint to get notified about creating,
+#    updating nad deleting of databases.
 
 Version 1.3.0
 -------------
